实现商品添加接口